--- a/op.nonprod.env
+++ b/op.nonprod.env
@@ -1,10 +1,7 @@
 # Secrets
 export TERRAFORM_CLOUD_TOKEN={{ op://cohorts/svc-terraform-cloud/api-token }}
 export GREN_GITHUB_TOKEN={{ op://cohorts/svc-github/api-token }}
-export GPG_KEY_PASSPHRASE={{ op://cohorts/three-svc-gpg/passphrase }}
+export GPG_KEY_PASSPHRASE={{ op://cohorts/one-svc-gpg/passphrase }}
 
-# export DATADOG_API_KEY={{ op://empc-lab/svc-datadog/api-key }}
-# export DATADOG_APP_KEY={{ op://empc-lab/svc-datadog/app-key }}
-# export LAB_EVENTS_CHANNEL_WEBHOOK={{ op://empc-lab/svc-slack/lab-events }}
-# export AWS_ACCESS_KEY_ID={{ op://empc-lab/aws-dps-2/DPSNonprodServiceAccount-aws-access-key-id }}
-# export AWS_SECRET_ACCESS_KEY={{ op://empc-lab/aws-dps-2/DPSNonprodServiceAccount-aws-secret-access-key }}
+export AWS_ACCESS_KEY_ID={{ op://cohorts/one-aws/DPSNonprodServiceAccount-aws-access-key-id }}
+export AWS_SECRET_ACCESS_KEY={{ op://cohorts/one-aws/DPSNonprodServiceAccount-aws-secret-access-key }}
